[package]
name = "eka_parser"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
indexmap = "2.3.0"
lexical = "6.1.1"
logos = "0.14.1"
misc_utils = { git = "https://github.com/Clinery1/misc_utils.git", version = "0.4.3" }
parser_helper = { git = "https://github.com/Clinery1/parser_helper.git", version = "0.4.1", features = ["logos"] }
rustc-hash = "2.0.0"

eka_core = {path = "../eka_core"}
